2005-08-21  Timothy Brownawell  <tbrownaw@gmail.com>

	* change_set.{cc,hh}: New function, transplant_change_set . Used
	for update.
	* change_set.cc: use versioned scalars for tracking file hashes.
	Clean up project_missing_deltas.

2005-08-21  Timothy Brownawell  <tbrownaw@gmail.com>

	Fix bad merge (user error).

2005-08-20  Timothy Brownawell  <tbrownaw@gmail.com>

	* pcdv.cc (change_value): Bugfix.

2005-08-20  Timothy Brownawell  <tbrownaw@gmail.com>

	* change_set.cc: use versioned scalars to track file edits
	* pcdv.cc (tree_state::current_scalars): bugfix

2005-08-20  Timothy Brownawell  <tbrownaw@gmail.com>

	* pcdv.{cc,hh} (tree merger): each file now gets a versioned scalar

2005-08-19  Timothy Brownawell  <tbrownaw@gmail.com>

	* change_set.cc: Add (and use) dump() for vector<path_rearrangement>
	* pcdv.cc: Clean up P() / L() usage.
	* pcdv.cc (item_status::suture): Downgrade invariant (should
	have been error) to warning; was triggered by monotone db.

2005-08-18  Timothy Brownawell  <tbrownaw@gmail.com>

	* pcdv.cc (tree_state::merge_with_resolution): bugfix, multiple
	items sharing the empty name is not a suture

2005-08-18  Timothy Brownawell  <tbrownaw@gmail.com>

	PASS 'make check'
	* pcdv.{cc,hh}: Bugfix tree_state::merge_with_rearrangement .
	Improve suture-handling code.
	* pcdv.cc, change_set.cc: Clean up "printf debugging".
	* change_set.cc: remove commented-out remains of old tree merger

2005-08-17  Timothy Brownawell  <tbrownaw@gmail.com>

	Improve testsuite compliance: 1 failure remaining.
	* tests/t_merge_add_del.at: Remove XFAIL
	* pcdv.{cc,hh}, change_set.cc: (Ick! Ick! Ick!) allow tree
	merger to generate sutures. Bugfix suture handling code.
	Bugfix tree_state::get_changes_for_merge .
	* sanity.cc (gasp()): When catching an error from dumping a MM'd
	variable, do not discard output generated prior to the error. This
	way, at least the header line (function name, file, line no.) is
	printed.