@@ -1,3 +1,8 @@
+2005-08-22  Timothy Brownawell  <tbrownaw@gmail.com>
+
+	* change_set.cc (process_filetree_history): Only go back to the lcad.
+	Prehistory isn't needed for merging, and slows things down a lot.
+
 2005-08-21  Timothy Brownawell  <tbrownaw@gmail.com>
 
 	* change_set.{cc,hh}: New function, transplant_change_set . Used
